crates/ferrum-interfaces/tests/ui/vnext/fail/failure_envelope_is_not_deserialize.rs
use ferrum_interfaces::vnext::FailureEnvelope;

fn main() {
    let _: FailureEnvelope = serde_json::from_str("{}").unwrap();
}
